@@ -186,6 +186,13 @@
                 </label>
           </div>
 
+
+          <select id="someSymbolSelect" name="someSymbolSelect">
+              <option>all</option>
+              <option>active</option>
+              <option>inactive</option>
+          </select>
+
           <button type="submit" value="Save changes" class="btn primary">Save Changes</button> <button class="btn" type="reset">Cancel</button>
 
       </fieldset>
